# Synchrotron

./: README.md  main.py  node.py  pyproject.toml  startup.scd
examples/: megalovania.syn  midi_in.syn  pwm.syn  pwm_plus.syn  pwm_plus_notes.syn
synchrolang/: __init__.py  synchrolang.lark
synchrotron/: __init__.py  __main__.py  server.py  synchrotron.py  types.py
synchrotron/console/: __init__.py  __main__.py  app.py  app.tcss  synchrolang.lark  synchrolang.py
synchrotron/nodes/: __init__.py  _base.py  _midi.py  audio.py  base.py  core.py  data.py  midi.py
synchrotron/server/: __init__.py  __main__.py  api.py  cli.py  dependencies.py  models.py  server.py
synchrotron/synchrolang/: __init__.py  parser.py  synchrolang.lark  transformer.py
synchrotron/ui/: app.py
tests/: rest_api.http
